--- a/kubeflow/lab-02.ipynb
+++ b/kubeflow/lab-02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Improving Google's [Continuous training pipeline with Kubeflow Pipeline and AI Platform](https://github.com/GoogleCloudPlatform/mlops-on-gcp/blob/master/on_demand/kfp-caip-sklearn/lab-02-kfp-pipeline/lab-02.ipynb) example"
+    "# Improving Google's [Continuous training pipeline with Kubeflow Pipeline and AI Platform](https://github.com/GoogleCloudPlatform/mlops-on-gcp/blob/master/on_demand/kfp-caip-sklearn/lab-02-kfp-pipeline/exercises/lab-02.ipynb) example"
    ]
   },
   {
@@ -12,13 +12,13 @@
    "metadata": {},
    "source": [
     "**Learning Objectives:**\n",
-    "1. Learn how to use Kubeflow Pipeline(KFP) pre-build components (BiqQuery, AI Platform training and predictions)\n",
+    "1. Learn how to use Kubeflow Pipeline (KFP) pre-build components (BiqQuery, AI Platform training and predictions)\n",
     "1. Learn how to use KFP lightweight python components\n",
     "1. Learn how to build a KFP with these components\n",
     "1. Learn how to compile, upload, and run a KFP with the command line\n",
     "\n",
     "\n",
-    "In this lab, you will build, deploy, and run a KFP pipeline that orchestrates **BigQuery** and **AI Platform** services to train, tune, and deploy a **scikit-learn** model."
+    "In this lab, you will build, deploy, and run a KFP pipeline that orchestrates **BigQuery** and **AI Platform** services to train, tune, and deploy a **scikit-learn** model.\n"
    ]
   },
   {
@@ -34,7 +34,9 @@
    "source": [
     "The workflow implemented by the pipeline is defined using a Python based Domain Specific Language (DSL). The pipeline's DSL is in the `covertype_training_pipeline.py` file that we will generate below.\n",
     "\n",
-    "The pipeline's DSL has been designed to avoid hardcoding any environment specific settings like file paths or connection strings. These settings are provided to the pipeline code through a set of environment variables.\n"
+    "The pipeline's DSL has been designed to avoid hardcoding any environment specific settings like file paths or connection strings. These settings are provided to the pipeline code through a set of environment variables.\n",
+    "\n",
+    "**NOTE: Because there are no environment variables set, therefore covertype_training_pipeline.py file is missing;  we will create it in the next step.**"
    ]
   },
   {
@@ -53,13 +55,25 @@
     "The pipeline uses a mix of custom and pre-build components.\n",
     "\n",
     "- Pre-build components. The pipeline uses the following pre-build components that are included with the KFP distribution:\n",
-    "    - [BigQuery query component](https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/bigquery/query)\n",
-    "    - [AI Platform Training component](https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/ml_engine/train)\n",
-    "    - [AI Platform Deploy component](https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/ml_engine/deploy)\n",
-    "- Custom components. The pipeline uses two custom helper components that encapsulate functionality not available in any of the pre-build components. The components are implemented using the KFP SDK's [Lightweight Python Components](https://www.kubeflow.org/docs/pipelines/sdk/lightweight-python-components/) mechanism. The code for the components is in the `helper_components.py` file:\n",
+    "    - [BigQuery query component](https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/bigquery/query) (component to submit a query to BigQuery and store the result in a Cloud Storage bucket)\n",
+    "    - [AI Platform Training component](https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/ml_engine/train) (component to submit an AI Platform training job as a step in a pipeline)\n",
+    "    - [AI Platform Deploy component](https://github.com/kubeflow/pipelines/tree/0.2.5/components/gcp/ml_engine/deploy) (component to deploy a trained model from a Cloud Storage location to Cloud ML Engine)\n",
+    "- Custom components. The pipeline uses two custom helper components that encapsulate functionality not available in any of the pre-build components. The components are implemented using the KFP SDK's [Lightweight Python Components](https://www.kubeflow.org/docs/pipelines/sdk/lightweight-python-components/) mechanism. The code for the components is in the [`helper_components.py`](https://github.com/GoogleCloudPlatform/mlops-on-gcp/blob/master/on_demand/kfp-caip-sklearn/lab-02-kfp-pipeline/pipeline) file:\n",
     "    - **Retrieve Best Run**. This component retrieves a tuning metric and hyperparameter values for the best run of a AI Platform Training hyperparameter tuning job.\n",
     "    - **Evaluate Model**. This component evaluates a *sklearn* trained model using a provided metric and a testing dataset.\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Complete TO DOs the pipeline file below.\n",
+    "\n",
+    "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening [**lab-02.ipynb**](https://github.com/GoogleCloudPlatform/mlops-on-gcp/blob/master/on_demand/kfp-caip-sklearn/lab-02-kfp-pipeline/lab-02.ipynb).\n",
+    "</ql-infobox>"
    ]
   },
   {
@@ -157,15 +171,13 @@
     "\n",
     "\n",
     "# Create component factories\n",
-    "component_store = kfp.components.ComponentStore(\n",
-    "    local_search_paths=None, url_search_prefixes=[COMPONENT_URL_SEARCH_PREFIX])\n",
+    "component_store = # TO DO: Complete the command\n",
     "\n",
-    "bigquery_query_op = component_store.load_component('bigquery/query')\n",
-    "mlengine_train_op = component_store.load_component('ml_engine/train')\n",
-    "mlengine_deploy_op = component_store.load_component('ml_engine/deploy')\n",
-    "retrieve_best_run_op = func_to_container_op(\n",
-    "    retrieve_best_run, base_image=BASE_IMAGE)\n",
-    "evaluate_model_op = func_to_container_op(evaluate_model, base_image=BASE_IMAGE)\n",
+    "bigquery_query_op = # TO DO: Use the pre-build bigquery/query component\n",
+    "mlengine_train_op = # TO DO: Use the pre-build ml_engine/train\n",
+    "mlengine_deploy_op = # TO DO: Use the pre-build ml_engine/deploy component\n",
+    "retrieve_best_run_op = # TO DO: Package the retrieve_best_run function into a lightweight component\n",
+    "evaluate_model_op = # TO DO: Package the evaluate_model function into a lightweight component\n",
     "\n",
     "\n",
     "@kfp.dsl.pipeline(\n",
@@ -206,13 +218,7 @@
     "\n",
     "    validation_file_path = '{}/{}'.format(gcs_root, VALIDATION_FILE_PATH)\n",
     "\n",
-    "    create_validation_split = bigquery_query_op(\n",
-    "        query=query,\n",
-    "        project_id=project_id,\n",
-    "        dataset_id=dataset_id,\n",
-    "        table_id='',\n",
-    "        output_gcs_path=validation_file_path,\n",
-    "        dataset_location=dataset_location)\n",
+    "    create_validation_split = # TODO - use the bigquery_query_op\n",
     "\n",
     "    # Create the testing split\n",
     "    query = generate_sampling_query(\n",
@@ -220,13 +226,8 @@
     "\n",
     "    testing_file_path = '{}/{}'.format(gcs_root, TESTING_FILE_PATH)\n",
     "\n",
-    "    create_testing_split = bigquery_query_op(\n",
-    "        query=query,\n",
-    "        project_id=project_id,\n",
-    "        dataset_id=dataset_id,\n",
-    "        table_id='',\n",
-    "        output_gcs_path=testing_file_path,\n",
-    "        dataset_location=dataset_location)\n",
+    "    create_testing_split = # TO DO: Use the bigquery_query_op\n",
+    "   \n",
     "\n",
     "    # Tune hyperparameters\n",
     "    tune_args = [\n",
@@ -239,13 +240,7 @@
     "    job_dir = '{}/{}/{}'.format(gcs_root, 'jobdir/hypertune',\n",
     "                                kfp.dsl.RUN_ID_PLACEHOLDER)\n",
     "\n",
-    "    hypertune = mlengine_train_op(\n",
-    "        project_id=project_id,\n",
-    "        region=region,\n",
-    "        master_image_uri=TRAINER_IMAGE,\n",
-    "        job_dir=job_dir,\n",
-    "        args=tune_args,\n",
-    "        training_input=hypertune_settings)\n",
+    "    hypertune = # TO DO: Use the mlengine_train_op\n",
     "\n",
     "    # Retrieve the best trial\n",
     "    get_best_trial = retrieve_best_run_op(\n",
@@ -263,12 +258,7 @@
     "        get_best_trial.outputs['max_iter'], '--hptune', 'False'\n",
     "    ]\n",
     "\n",
-    "    train_model = mlengine_train_op(\n",
-    "        project_id=project_id,\n",
-    "        region=region,\n",
-    "        master_image_uri=TRAINER_IMAGE,\n",
-    "        job_dir=job_dir,\n",
-    "        args=train_args)\n",
+    "    train_model = # TO DO: Use the mlengine_train_op\n",
     "\n",
     "    # Evaluate the model on the testing split\n",
     "    eval_model = evaluate_model_op(\n",
@@ -298,32 +288,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The custom components execute in a container image defined in `base_image/Dockerfile`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat base_image/Dockerfile"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The training step in the pipeline employes the AI Platform Training component to schedule a  AI Platform Training job in a custom training container. The custom training image is defined in `trainer_image/Dockerfile`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat trainer_image/Dockerfile"
+    "The custom components execute in a container image defined in `base_image/Dockerfile`.\n",
+    "\n",
+    "```dockerfile\n",
+    "FROM gcr.io/deeplearning-platform-release/base-cpu\n",
+    "RUN pip install -U fire scikit-learn==0.20.4 pandas==0.24.2 kfp==0.2.5\n",
+    "```\n",
+    "\n",
+    "The training step in the pipeline employes the AI Platform Training component to schedule a  AI Platform Training job in a custom training container. The custom training image is defined in `trainer_image/Dockerfile`.\n",
+    "\n",
+    "```dockerfile\n",
+    "FROM gcr.io/deeplearning-platform-release/base-cpu\n",
+    "RUN pip install -U fire cloudml-hypertune scikit-learn==0.20.4 pandas==0.24.2\n",
+    "WORKDIR /app\n",
+    "COPY train.py .\n",
+    "\n",
+    "ENTRYPOINT [\"python\", \"train.py\"]\n",
+    "```"
    ]
   },
   {
@@ -370,7 +351,7 @@
     "\n",
     "For **ENDPOINT**, use the value of the `host` variable in the **Connect to this Kubeflow Pipelines instance from a Python client via Kubeflow Pipelines SDK** section of the **SETTINGS** window.\n",
     "\n",
-    "For **ARTIFACT_STORE_URI**, copy the bucket name which starts with the qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default prefix from the previous cell output. Your copied value should look like **'gs://qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default'**"
+    "For **ARTIFACT_STORE_URI**, copy the bucket name which starts with the qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default prefix from the previous cell output. Your copied value should look like **'gs://qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default'**\n"
    ]
   },
   {
@@ -381,7 +362,7 @@
    "source": [
     "REGION = 'us-central1'\n",
     "ENDPOINT = '337dd39580cbcbd2-dot-us-central2.pipelines.googleusercontent.com' # TO DO: REPLACE WITH YOUR ENDPOINT\n",
-    "ARTIFACT_STORE_URI = 'gs://qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default'  # TO DO: REPLACE WITH YOUR ARTIFACT_STORE NAME \n",
+    "ARTIFACT_STORE_URI = 'gs://qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default' # TO DO: REPLACE WITH YOUR ARTIFACT_STORE NAME \n",
     "PROJECT_ID = !(gcloud config get-value core/project)\n",
     "PROJECT_ID = PROJECT_ID[0]"
    ]
@@ -497,12 +478,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Compile the `covertype_training_pipeline.py` with the `dsl-compile` command line:\n",
+    "\n",
+    "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening **lab-02.ipynb**.\n",
+    "</ql-infobox>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!dsl-compile --py pipeline/covertype_training_pipeline.py --output covertype_training_pipeline.yaml"
+    "# TO DO: Your code goes here"
    ]
   },
   {
@@ -529,16 +522,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise\n",
+    "\n",
+    "Upload the pipeline to the Kubeflow cluster using the `kfp` command line:\n",
+    "\n",
+    "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening **lab-02.ipynb**.\n",
+    "</ql-infobox>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "PIPELINE_NAME='covertype_continuous_training'\n",
     "\n",
-    "!kfp --endpoint $ENDPOINT pipeline upload \\\n",
-    "-p $PIPELINE_NAME \\\n",
-    "covertype_training_pipeline.yaml"
+    "# TO DO: Your code goes here"
    ]
   },
   {
@@ -568,6 +571,7 @@
     "### Submit a run\n",
     "\n",
     "Find the ID of the `covertype_continuous_training` pipeline you uploaded in the previous step and update the value of `PIPELINE_ID` .\n",
+    "\n",
     "\n"
    ]
   },
@@ -603,37 +607,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the pipeline using the `kfp` command line by retrieving the variables from the environment to pass to the pipeline where:\n",
+    "### Exercise\n",
+    "\n",
+    "Run the pipeline using the `kfp` command line. Here are some of the variable\n",
+    "you will have to use to pass to the pipeline:\n",
     "\n",
     "- EXPERIMENT_NAME is set to the experiment used to run the pipeline. You can choose any name you want. If the experiment does not exist it will be created by the command\n",
     "- RUN_ID is the name of the run. You can use an arbitrary name\n",
     "- PIPELINE_ID is the id of your pipeline. Use the value retrieved by the   `kfp pipeline list` command\n",
     "- GCS_STAGING_PATH is the URI to the Cloud Storage location used by the pipeline to store intermediate files. By default, it is set to the `staging` folder in your artifact store.\n",
-    "- REGION is a compute region for AI Platform Training and Prediction. \n",
+    "- REGION is a compute region for AI Platform Training and Prediction.\n",
     "\n",
-    "You should be already familiar with these and other parameters passed to the command. If not go back and review the pipeline code."
+    "\n",
+    "<ql-infobox><b>NOTE:</b> If you need help, you may take a look at the complete solution by navigating to **mlops-on-gcp > workshops > kfp-caip-sklearn > lab-02-kfp-pipeline** and opening **lab-02.ipynb**.\n",
+    "</ql-infobox>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!kfp --endpoint $ENDPOINT run submit \\\n",
-    "-e $EXPERIMENT_NAME \\\n",
-    "-r $RUN_ID \\\n",
-    "-p $PIPELINE_ID \\\n",
-    "project_id=$PROJECT_ID \\\n",
-    "gcs_root=$GCS_STAGING_PATH \\\n",
-    "region=$REGION \\\n",
-    "source_table_name=$SOURCE_TABLE \\\n",
-    "dataset_id=$DATASET_ID \\\n",
-    "evaluation_metric_name=$EVALUATION_METRIC \\\n",
-    "evaluation_metric_threshold=$EVALUATION_METRIC_THRESHOLD \\\n",
-    "model_id=$MODEL_ID \\\n",
-    "version_id=$VERSION_ID \\\n",
-    "replace_existing_version=$REPLACE_EXISTING_VERSION"
+    "# TO DO: Your code goes here"
    ]
   },
   {
