added table of contents and seriously improved some wording

--- a/kubeflow/lab-02.ipynb
+++ b/kubeflow/lab-02.ipynb
@@ -11,11 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Learning Objectives:**\n",
-    "1. Learn how to use Kubeflow Pipeline (KFP) pre-build components (BiqQuery, AI Platform training and predictions)\n",
-    "1. Learn how to use KFP lightweight python components\n",
-    "1. Learn how to build a KFP with these components\n",
-    "1. Learn how to compile, upload, and run a KFP with the command line\n",
+    "### Contents\n",
+    "1. [Understanding the pipeline design](#Understanding-the-pipeline-design)\n",
+    "1. [Building and deploying the pipeline](#Building-and-deploying-the-pipeline)\n",
+    "    1. [Configure environment settings](#Configure-environment-settings)\n",
+    "    1. [Build the trainer image](#Build-the-trainer-image)\n",
+    "    1. [Build the base image for custom components](#Build-the-base-image-for-custom-components)\n",
+    "    1. [Compile the pipeline](#Compile-the-pipeline)\n",
+    "    1. [Deploy the pipeline package](#Deploy-the-pipeline-package)\n",
+    "1. [Submitting pipeline runs](#Submitting-pipeline-runs)\n",
+    "    1. [List the pipelines in AI Platform Pipelines](#List-the-pipelines-in-AI-Platform-Pipelines)\n",
+    "    1. [Submit a run](#Submit-a-run)\n",
+    "    1. [Monitoring the run](#Monitoring-the-run)\n",
     "\n",
     "\n",
     "In this lab, you will build, deploy, and run a KFP pipeline that orchestrates **BigQuery** and **AI Platform** services to train, tune, and deploy a **scikit-learn** model.\n"
@@ -36,7 +43,7 @@
     "\n",
     "The pipeline's DSL has been designed to avoid hardcoding any environment specific settings like file paths or connection strings. These settings are provided to the pipeline code through a set of environment variables.\n",
     "\n",
-    "**NOTE: Because there are no environment variables set, therefore covertype_training_pipeline.py file is missing;  we will create it in the next step.**"
+    "**NOTE: We will create `covertype_training_pipeline.py` in the next step. The environment variables are [set later](#Configure-environment-settings) in the document.**"
    ]
   },
   {
