adding explanations to the code

--- a/kubeflow/lab-02.ipynb
+++ b/kubeflow/lab-02.ipynb
@@ -98,11 +98,12 @@
     "\n",
     "import os\n",
     "\n",
-    "from helper_components import evaluate_model\n",
+    "from helper_components import evaluate_model # helper components is in same folder where this file is being saved\n",
     "from helper_components import retrieve_best_run\n",
-    "from jinja2 import Template\n",
+    "from jinja2 import Template # template engine is similar to the Python format() method\n",
     "import kfp\n",
-    "from kfp.components import func_to_container_op\n",
+    "from kfp.components import func_to_container_op #Converts a Python function to a component and returns a task\n",
+    "# A pipeline component is a self-contained set of code that performs one step in your ML workflow.\n",
     "from kfp.dsl.types import Dict\n",
     "from kfp.dsl.types import GCPProjectID\n",
     "from kfp.dsl.types import GCPRegion\n",
@@ -111,12 +112,12 @@
     "from kfp.gcp import use_gcp_secret\n",
     "\n",
     "# Defaults and environment settings\n",
-    "BASE_IMAGE = os.getenv('BASE_IMAGE')\n",
-    "TRAINER_IMAGE = os.getenv('TRAINER_IMAGE')\n",
-    "RUNTIME_VERSION = os.getenv('RUNTIME_VERSION')\n",
-    "PYTHON_VERSION = os.getenv('PYTHON_VERSION')\n",
-    "COMPONENT_URL_SEARCH_PREFIX = os.getenv('COMPONENT_URL_SEARCH_PREFIX')\n",
-    "USE_KFP_SA = os.getenv('USE_KFP_SA')\n",
+    "BASE_IMAGE = os.getenv('BASE_IMAGE') # set later in 2B\n",
+    "TRAINER_IMAGE = os.getenv('TRAINER_IMAGE') # set later in 2C\n",
+    "RUNTIME_VERSION = os.getenv('RUNTIME_VERSION') # set in 2D\n",
+    "PYTHON_VERSION = os.getenv('PYTHON_VERSION') # set in 2D\n",
+    "COMPONENT_URL_SEARCH_PREFIX = os.getenv('COMPONENT_URL_SEARCH_PREFIX') # set in 2D\n",
+    "USE_KFP_SA = os.getenv('USE_KFP_SA') # set in 2D\n",
     "\n",
     "TRAINING_FILE_PATH = 'datasets/training/data.csv'\n",
     "VALIDATION_FILE_PATH = 'datasets/validation/data.csv'\n",
@@ -162,6 +163,7 @@
     "         WHERE \n",
     "         MOD(ABS(FARM_FINGERPRINT(TO_JSON_STRING(cover))), {{ num_lots }}) IN ({{ lots }})\n",
     "         \"\"\"\n",
+    "    # template engine is similar to the Python format() method\n",
     "    query = Template(sampling_query_template).render(\n",
     "        source_table=source_table_name, num_lots=num_lots, lots=str(lots)[1:-1])\n",
     "\n",
@@ -169,13 +171,17 @@
     "\n",
     "\n",
     "# Create component factories\n",
-    "component_store = # TO DO: Complete the command\n",
+    "# kfp.components.ComponentStore.load_component method loads a component from local file or \n",
+    "# URL and creates a task factory function.\n",
+    "component_store = kfp.components.ComponentStore(\n",
+    "    local_search_paths=None, url_search_prefixes=[COMPONENT_URL_SEARCH_PREFIX])\n",
     "\n",
-    "bigquery_query_op = # TO DO: Use the pre-build bigquery/query component\n",
-    "mlengine_train_op = # TO DO: Use the pre-build ml_engine/train\n",
-    "mlengine_deploy_op = # TO DO: Use the pre-build ml_engine/deploy component\n",
-    "retrieve_best_run_op = # TO DO: Package the retrieve_best_run function into a lightweight component\n",
-    "evaluate_model_op = # TO DO: Package the evaluate_model function into a lightweight component\n",
+    "bigquery_query_op = component_store.load_component('bigquery/query')\n",
+    "mlengine_train_op = component_store.load_component('ml_engine/train')\n",
+    "mlengine_deploy_op = component_store.load_component('ml_engine/deploy')\n",
+    "retrieve_best_run_op = func_to_container_op(\n",
+    "    retrieve_best_run, base_image=BASE_IMAGE)\n",
+    "evaluate_model_op = func_to_container_op(evaluate_model, base_image=BASE_IMAGE)\n",
     "\n",
     "\n",
     "@kfp.dsl.pipeline(\n",
