--- a/kubeflow/lab-02.ipynb
+++ b/kubeflow/lab-02.ipynb
@@ -76,9 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting ./pipeline/covertype_training_pipeline.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile ./pipeline/covertype_training_pipeline.py\n",
     "# Copyright 2019 Google LLC\n",
@@ -372,9 +380,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gs://artifacts.qwiklabs-gcp-04-9c5802fee988.appspot.com/\n",
+      "gs://qwiklabs-gcp-04-9c5802fee988-kubeflowpipelines-default/\n",
+      "gs://qwiklabs-gcp-04-9c5802fee988_cloudbuild/\n"
+     ]
+    }
+   ],
    "source": [
     "!gsutil ls"
    ]
@@ -392,13 +410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "REGION = 'us-central1'\n",
-    "ENDPOINT = '337dd39580cbcbd2-dot-us-central2.pipelines.googleusercontent.com' # TO DO: REPLACE WITH YOUR ENDPOINT\n",
-    "ARTIFACT_STORE_URI = 'gs://qwiklabs-gcp-xx-xxxxxxx-kubeflowpipelines-default' # TO DO: REPLACE WITH YOUR ARTIFACT_STORE NAME \n",
+    "ENDPOINT = '21a550bc19489d96-dot-us-central1.pipelines.googleusercontent.com' # TO DO: REPLACE WITH YOUR ENDPOINT\n",
+    "ARTIFACT_STORE_URI = 'gs://qwiklabs-gcp-04-9c5802fee988-kubeflowpipelines-default' # TO DO: REPLACE WITH YOUR ARTIFACT_STORE NAME \n",
     "PROJECT_ID = !(gcloud config get-value core/project)\n",
     "PROJECT_ID = PROJECT_ID[0]"
    ]
@@ -412,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,11 +506,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: USE_KFP_SA=False\n",
+      "env: BASE_IMAGE=gcr.io/qwiklabs-gcp-04-9c5802fee988/base_image:latest\n",
+      "env: TRAINER_IMAGE=gcr.io/qwiklabs-gcp-04-9c5802fee988/trainer_image:latest\n",
+      "env: COMPONENT_URL_SEARCH_PREFIX=https://raw.githubusercontent.com/kubeflow/pipelines/0.2.5/components/gcp/\n",
+      "env: RUNTIME_VERSION=1.15\n",
+      "env: PYTHON_VERSION=3.7\n"
+     ]
+    }
+   ],
    "source": [
-    "USE_KFP_SA = False\n",
+    "USE_KFP_SA = True\n",
     "\n",
     "COMPONENT_URL_SEARCH_PREFIX = 'https://raw.githubusercontent.com/kubeflow/pipelines/0.2.5/components/gcp/'\n",
     "RUNTIME_VERSION = '1.15'\n",
@@ -527,11 +558,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO DO: Your code goes here"
+    "!dsl-compile --py pipeline/covertype_training_pipeline.py --output covertype_training_pipeline.yaml"
    ]
   },
   {
@@ -543,9 +574,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"apiVersion\": |-\n",
+      "  argoproj.io/v1alpha1\n",
+      "\"kind\": |-\n",
+      "  Workflow\n",
+      "\"metadata\":\n",
+      "  \"annotations\":\n",
+      "    \"pipelines.kubeflow.org/pipeline_spec\": |-\n",
+      "      {\"description\": \"The pipeline training and deploying the Covertype classifierpipeline_yaml\", \"inputs\": [{\"name\": \"project_id\"}, {\"name\": \"region\"}, {\"name\": \"source_table_name\"}, {\"name\": \"gcs_root\"}, {\"name\": \"dataset_id\"}, {\"name\": \"evaluation_metric_name\"}, {\"name\": \"evaluation_metric_threshold\"}, {\"name\": \"model_id\"}, {\"name\": \"version_id\"}, {\"name\": \"replace_existing_version\"}, {\"default\": \"\\n{\\n    \\\"hyperparameters\\\":  {\\n        \\\"goal\\\": \\\"MAXIMIZE\\\",\\n        \\\"maxTrials\\\": 6,\\n        \\\"maxParallelTrials\\\": 3,\\n        \\\"hyperparameterMetricTag\\\": \\\"accuracy\\\",\\n        \\\"enableTrialEarlyStopping\\\": True,\\n        \\\"params\\\": [\\n            {\\n                \\\"parameterName\\\": \\\"max_iter\\\",\\n                \\\"type\\\": \\\"DISCRETE\\\",\\n                \\\"discreteValues\\\": [500, 1000]\\n            },\\n            {\\n                \\\"parameterName\\\": \\\"alpha\\\",\\n                \\\"type\\\": \\\"DOUBLE\\\",\\n                \\\"minValue\\\": 0.0001,\\n                \\\"maxValue\\\": 0.001,\\n                \\\"scaleType\\\": \\\"UNIT_LINEAR_SCALE\\\"\\n            }\\n        ]\\n    }\\n}\\n\", \"name\": \"hypertune_settings\", \"optional\": true}, {\"default\": \"US\", \"name\": \"dataset_location\", \"optional\": true}], \"name\": \"Covertype Classifier Training\"}\n",
+      "  \"generateName\": |-\n",
+      "    covertype-classifier-training-\n"
+     ]
+    }
+   ],
    "source": [
     "!head covertype_training_pipeline.yaml"
    ]
@@ -571,13 +619,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pipeline cdc3a5c4-729b-4e3c-884f-0b156a1fea1d has been submitted\n",
+      "\n",
+      "Pipeline Details\n",
+      "------------------\n",
+      "ID           cdc3a5c4-729b-4e3c-884f-0b156a1fea1d\n",
+      "Name         covertype_continuous_training\n",
+      "Description\n",
+      "Uploaded at  2021-09-18T15:17:29+00:00\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| Parameter Name              | Default Value                                    |\n",
+      "+=============================+==================================================+\n",
+      "| project_id                  |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| region                      |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| source_table_name           |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| gcs_root                    |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| dataset_id                  |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| evaluation_metric_name      |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| evaluation_metric_threshold |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| model_id                    |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| version_id                  |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| replace_existing_version    |                                                  |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| hypertune_settings          | {                                                |\n",
+      "|                             |     \"hyperparameters\":  {                        |\n",
+      "|                             |         \"goal\": \"MAXIMIZE\",                      |\n",
+      "|                             |         \"maxTrials\": 6,                          |\n",
+      "|                             |         \"maxParallelTrials\": 3,                  |\n",
+      "|                             |         \"hyperparameterMetricTag\": \"accuracy\",   |\n",
+      "|                             |         \"enableTrialEarlyStopping\": True,        |\n",
+      "|                             |         \"params\": [                              |\n",
+      "|                             |             {                                    |\n",
+      "|                             |                 \"parameterName\": \"max_iter\",     |\n",
+      "|                             |                 \"type\": \"DISCRETE\",              |\n",
+      "|                             |                 \"discreteValues\": [500, 1000]    |\n",
+      "|                             |             },                                   |\n",
+      "|                             |             {                                    |\n",
+      "|                             |                 \"parameterName\": \"alpha\",        |\n",
+      "|                             |                 \"type\": \"DOUBLE\",                |\n",
+      "|                             |                 \"minValue\": 0.0001,              |\n",
+      "|                             |                 \"maxValue\": 0.001,               |\n",
+      "|                             |                 \"scaleType\": \"UNIT_LINEAR_SCALE\" |\n",
+      "|                             |             }                                    |\n",
+      "|                             |         ]                                        |\n",
+      "|                             |     }                                            |\n",
+      "|                             | }                                                |\n",
+      "+-----------------------------+--------------------------------------------------+\n",
+      "| dataset_location            | US                                               |\n",
+      "+-----------------------------+--------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "PIPELINE_NAME='covertype_continuous_training'\n",
     "\n",
-    "# TO DO: Your code goes here"
+    "!kfp --endpoint $ENDPOINT pipeline upload \\\n",
+    "  -p $PIPELINE_NAME \\\n",
+    "  covertype_training_pipeline.yaml"
    ]
   },
   {
@@ -593,9 +707,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------------------------+------------------------------------------------+---------------------------+\n",
+      "| Pipeline ID                          | Name                                           | Uploaded at               |\n",
+      "+======================================+================================================+===========================+\n",
+      "| cdc3a5c4-729b-4e3c-884f-0b156a1fea1d | covertype_continuous_training                  | 2021-09-18T15:17:29+00:00 |\n",
+      "+--------------------------------------+------------------------------------------------+---------------------------+\n",
+      "| 201772d0-c7c5-44f4-b275-96bf311599d3 | [Tutorial] V2 lightweight Python components    | 2021-09-18T14:31:12+00:00 |\n",
+      "+--------------------------------------+------------------------------------------------+---------------------------+\n",
+      "| f5201d62-8251-4e8a-af35-1156053a6f26 | [Tutorial] DSL - Control structures            | 2021-09-18T14:31:11+00:00 |\n",
+      "+--------------------------------------+------------------------------------------------+---------------------------+\n",
+      "| 1a9312e3-ab60-4a58-94fa-22523a96d65f | [Tutorial] Data passing in python components   | 2021-09-18T14:31:10+00:00 |\n",
+      "+--------------------------------------+------------------------------------------------+---------------------------+\n",
+      "| 33716205-677f-4771-b3ea-4fa3d60f8fa6 | [Demo] TFX - Taxi tip prediction model trainer | 2021-09-18T14:31:09+00:00 |\n",
+      "+--------------------------------------+------------------------------------------------+---------------------------+\n",
+      "| 827d3b18-50ce-4b33-8c9b-131b73182789 | [Demo] XGBoost - Iterative model training      | 2021-09-18T14:31:08+00:00 |\n",
+      "+--------------------------------------+------------------------------------------------+---------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "!kfp --endpoint $ENDPOINT pipeline list"
    ]
@@ -613,16 +749,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PIPELINE_ID='0918568d-758c-46cf-9752-e04a4403cd84' # TO DO: REPLACE WITH YOUR PIPELINE ID "
+    "PIPELINE_ID='cdc3a5c4-729b-4e3c-884f-0b156a1fea1d' # TO DO: REPLACE WITH YOUR PIPELINE ID "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,11 +797,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating experiment Covertype_Classifier_Training.\n",
+      "Run 150dc278-8ac7-409a-8885-7e629d735341 is submitted\n",
+      "+--------------------------------------+---------+----------+---------------------------+\n",
+      "| run id                               | name    | status   | created at                |\n",
+      "+======================================+=========+==========+===========================+\n",
+      "| 150dc278-8ac7-409a-8885-7e629d735341 | Run_001 |          | 2021-09-18T15:20:42+00:00 |\n",
+      "+--------------------------------------+---------+----------+---------------------------+\n"
+     ]
+    }
+   ],
    "source": [
-    "# TO DO: Your code goes here"
+    "'''pipeline runtime params:\n",
+    "def covertype_train(project_id,\n",
+    "                    region,\n",
+    "                    source_table_name,\n",
+    "                    gcs_root,\n",
+    "                    dataset_id,\n",
+    "                    evaluation_metric_name,\n",
+    "                    evaluation_metric_threshold,\n",
+    "                    model_id,\n",
+    "                    version_id,\n",
+    "                    replace_existing_version,\n",
+    "                    hypertune_settings=HYPERTUNE_SETTINGS,\n",
+    "                    dataset_location='US'):\n",
+    "                    '''\n",
+    "!kfp --endpoint $ENDPOINT run submit \\\n",
+    "    -e $EXPERIMENT_NAME \\\n",
+    "    -r $RUN_ID \\\n",
+    "    -p $PIPELINE_ID \\\n",
+    "    project_id=$PROJECT_ID \\\n",
+    "    gcs_root=$GCS_STAGING_PATH \\\n",
+    "    region=$REGION \\\n",
+    "    source_table_name=$SOURCE_TABLE \\\n",
+    "    dataset_id=$DATASET_ID \\\n",
+    "    evaluation_metric_name=$EVALUATION_METRIC \\\n",
+    "    evaluation_metric_threshold=$EVALUATION_METRIC_THRESHOLD \\\n",
+    "    model_id=$MODEL_ID \\\n",
+    "    version_id=$VERSION_ID \\\n",
+    "    replace_existing_version=$REPLACE_EXISTING_VERSION"
    ]
   },
   {
