--- a/kubeflow/lab-02.ipynb
+++ b/kubeflow/lab-02.ipynb
@@ -345,13 +345,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -523,7 +516,7 @@
     }
    ],
    "source": [
-    "USE_KFP_SA = True\n",
+    "USE_KFP_SA = False\n",
     "\n",
     "COMPONENT_URL_SEARCH_PREFIX = 'https://raw.githubusercontent.com/kubeflow/pipelines/0.2.5/components/gcp/'\n",
     "RUNTIME_VERSION = '1.15'\n",
